[project]
name = "ndpi"
authors = [
  {name = "Jonas Muecke", email = "jonas.muecke@tu-dresden.de" }
]
version = "0.1.0"
description = "Common data processing and presets"
dependencies = [
    "click>=8.3.0",
    "geoip2>=5.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "polars-lts-cpu>=1.33.1",
]

[project.scripts]
enrich = "ndpi.enrichment.cli.main:cli"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["ndpi"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
